hphp/hack/test/typecheck/variadic_args2.php
<?hh

function f(mixed ...$args = vec[]): void {}
